--- a/style.css
+++ b/style.css
@@ -86,3 +86,41 @@ p {
 .email-link:hover {
   text-decoration: underline;
 }
+
+@media (max-width: 450px) {
+  h1 {
+    font-size: 48px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
+  h2 {
+    font-size: 32px;
+    text-align: center;
+  }
+
+  h3 {
+    margin: 0 30px 0 30px;
+  }
+
+  p {
+    text-align: center;
+  }
+
+  .col-6 {
+    width: 100%;
+  }
+
+  .primary-link {
+    display: block;
+    text-align: center;
+    margin: 0 20px 0 20px;
+  }
+
+  .last-link {
+    margin-bottom: 50px;
+  }
+
+  #contact {
+    margin-bottom: 70px;
+  }
+}
